--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
           <div class="member">
             <div class="avatar" aria-hidden="true">AD</div>
             <div>
-              <strong>Advisor, TBD</strong><br>
-              <small>Clinical or HW systems</small>
+              <strong>Reza Varzandeh</strong><br>
+              <small> Speech and audio AI </small>
             </div>
           </div>
         </div>
