--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     "name": "NeuroEase",
     "url": "https://neuroease.tech/",
     "description": "Real‑time micro‑coaching based on wearable signals.",
-    "contactPoint": {"@type":"ContactPoint","contactType":"info","email":"info@neuroease.tech"}
+    "contactPoint": {"@type":"ContactPoint","contactType":"info","email":"neuroease-tech@gmx.de"}
   }
   </script>
 </head>
@@ -93,7 +93,7 @@
         <a href="#features">Product</a>
         <a href="#team">Team</a>
         <a href="#contact">Contact</a>
-        <a class="cta-btn" href="mailto:info@neuroease.tech?subject=NeuroEase%20inquiry">Get in touch</a>
+        <a class="cta-btn" href="mailto:neuroease-tech@gmx.de?subject=NeuroEase%20inquiry">Get in touch</a>
       </nav>
     </div>
   </header>
@@ -172,7 +172,7 @@
     <section id="contact">
       <div class="container">
         <h2>Contact</h2>
-        <p class="lead">For pilots and collaboration, write to <a href="mailto:info@neuroease.tech">info@neuroease.tech</a>. If you are interested in research cooperation, mention the topic and timeline.</p>
+        <p class="lead">For pilots and collaboration, write to <a href="mailto:neuroease-tech@gmx.de">neuroease-tech@gmx.de</a>. If you are interested in research cooperation, mention the topic and timeline.</p>
         <p class="notice">This site is a temporary one‑page overview. A detailed product page, documentation, and press kit will follow.</p>
       </div>
     </section>
@@ -182,7 +182,7 @@
     <section id="legal">
       <div class="container">
         <h2>Imprint and privacy</h2>
-        <p class="notice">Add the legally required details here for Germany. Include company or person name, address, contact email, and responsible person. Add a short privacy note about contact emails and any analytics if used. Remove this placeholder text once filled.</p>
+        <p class="notice">We do not use analytics or tracking on this page. If you contact us by email, your message will be processed for the purpose of responding to your inquiry, then archived according to statutory retention obligations. You may request deletion where no legal obligations apply. No cookies are set by this page.</p>
       </div>
     </section>
   </main>
