--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
           </div>
           <div class="member">
-            <div class="avatar" aria-hidden="true">AD</div>
+            <div class="avatar" aria-hidden="true">RV</div>
             <div>
               <strong>Reza Varzandeh</strong><br>
               <small> Speech and audio AI </small>
